added firebase basic example

--- a/src/app/components/repro-ui/repro-side-nav/repro-side-nav.component.html
+++ b/src/app/components/repro-ui/repro-side-nav/repro-side-nav.component.html
@@ -3,30 +3,6 @@
   <md-input-container>
      <input mdInput placeholder="Search" type="text" mdInput >
   </md-input-container>
-
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-  <button md-button>Flat button</button>
-
+  
+  <button *ngFor="let hero of heroes" md-button>{{hero.name}}</button>
 </div>
