--- a/src/app/components/repro-ui/repro-ui.component.html
+++ b/src/app/components/repro-ui/repro-ui.component.html
@@ -7,19 +7,19 @@
 
     <div class="nav-container"
         fxLayout="row">
-      <app-repro-nav-bar class="nav-bar"></app-repro-nav-bar>
+      <repro-nav-bar class="nav-bar"></repro-nav-bar>
     </div>
 
     <div class="body-container"
       fxLayout="row">
     <div class="col side-nav"
       fxFlex="25%">
-      <app-repro-side-nav></app-repro-side-nav>
+      <repro-side-nav></repro-side-nav>
     </div>
 
     <div class="col page-content-area"
     fxFlex="75%">
-    <app-repro-content></app-repro-content>
+    <repro-content></repro-content>
     </div>
   </div>
 
