--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<repro-ui></repro-ui>
+
+<!-- <repro-ui></repro-ui> -->
 
 <!-- <div class="row columns">
   <button (click)="login()" *ngIf="!(user | async)?.uid">Anonymous Login</button>
@@ -9,3 +10,5 @@
       <p *ngFor="let item of items | async"><img src="../assets/images/pin.svg">{{item.message}}</p>
   </div>
 </div> -->
+
+<router-outlet></router-outlet>
