--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,5 +1,16 @@
 
-<h1>landing page only</h1>
+<!-- <h1>landing page only</h1> -->
 <!-- <button routerLink="/repro-ui" routerLinkActive="active" md-button>repro-ui</button>
 <a routerLink="/repro-ui" routerLinkActive="active">repro-ui</a> -->
-<button (click)="redirect()" md-button>reproUI</button>
+<!-- <button (click)="redirect()" md-button>reproUI</button> -->
+
+
+<div class="index-style">
+
+  <div class="index-background-image">
+  </div>
+
+  <div class="centered">
+      <img (click)="redirect()" src="https://s3-us-west-2.amazonaws.com/port-blog/echoforest+logo.svg" alt="Echo Forest" />
+  </div>
+</div>
